# build parameters
[metadata]
name = mssql_dataframe
version = file: VERSION
author = Jason Cook
author_email = jasoncook1989@gmail.com
description = Update, Upsert, and Merge from Python dataframes to SQL Server and Azure SQL database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwcook23/mssql_dataframe
project_urls =
    Bug Tracker = https://github.com/jwcook23/mssql_dataframe/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
package_dir = 
packages = mssql_dataframe
python_requires = >=3.7
install_requires = 
    # Cursor.setinputsizes to specify odbc data type and size
    pyodbc>=4.0.24
    # expanded data types such as pandas.UInt8Dtype and pd.StringDtype
    pandas>=1.0.0
include_package_data = True

# pyest parameters
[tool:pytest]
testpaths = tests/
# turn on standard logging module at ERROR level to exclude WARNINGS being output to stdout without logger setup
log_cli = True
log_cli_level = ERROR
# TODO: remove warning filters or improve how they are filtered
# pyodbc.connect -> PyUnicode_FromUnicode(NULL, size) is deprecated; use PyUnicode_New() instead
filterwarnings = 
    ignore::DeprecationWarning:mssql_dataframe:68
    ignore::DeprecationWarning:mssql_dataframe:71

# coverage parameters
[coverage:run]
data_file = reports/.coverage
[coverage:xml]
output = reports/coverage.xml
[coverage:report]
fail_under = 100
[coverage:html]
directory = reports/coverage/

# flake8 parameters
[flake8]
ignore = 
    # E501: line too long (x > 79 characters)
    E501,
    # W503: line break before binary opertor : black prefers this style
    W503
output-file = reports/flake8.txt

# genbadge parameters
[genbadge]
output = reports/

# user custom parameters not used by other open source packages
[user:pytest]
junitxml = reports/test.xml