# build parameters
[metadata]
name = mssql_dataframe
version = file: VERSION
author = Jason Cook
author_email = jasoncook1989@gmail.com
description = Update, Upsert, and Merge from Python dataframes to SQL Server and Azure SQL database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwcook23/mssql_dataframe
project_urls =
    Bug Tracker = https://github.com/jwcook23/mssql_dataframe/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
# packages = mssql_dataframe
packages = find:
python_requires = >=3.7
install_requires =
    # Cursor.setinputsizes to specify odbc data type and size
    pyodbc>=4.0.24
    # expanded data types such as pandas.UInt8Dtype and pd.StringDtype
    pandas>=1.0.0
include_package_data = True

# pyest parameters
[tool:pytest]
# output to console
log_cli = True
# ERROR level to exclude WARNING without logger setup
log_cli_level = ERROR
filterwarnings = 
    # TODO: remove deprecation warning from pyodbc.connect
    ignore:PyUnicode_FromUnicode\(NULL, size\) is deprecated

# flake8 parameters
[flake8]
ignore = 
    # E501: line too long (x > 79 characters)
    E501,
    # W503: line break before binary opertor : black prefers this style
    W503

# coverage parameters
[coverage:run]
omit = 
    mssql_dataframe\__equality__.py